<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    tools:context="dk.blackdarkness.g17.cphindustries.activities.SceneViewActivity">


    <TextView
        android:id="@+id/fr_weapon_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Weapon 1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fr_weapon_details_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Status"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fr_weapon_details_title"
        app:layout_constraintTop_toBottomOf="@+id/fr_weapon_details_title" />

    <TextView
        android:id="@+id/fr_weapon_details_status_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fr_weapon_details_status"
        app:layout_constraintTop_toBottomOf="@+id/fr_weapon_details_status" />

    <TextView
        android:id="@+id/fr_weapon_details_tvDetails_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Details"
        app:layout_constraintStart_toStartOf="@+id/fr_weapon_details_title"
        app:layout_constraintTop_toBottomOf="@+id/fr_weapon_details_status_text" />

    <LinearLayout
        android:id="@+id/fr_weapon_details_linearLayout_detail_titles"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/fr_weapon_details_tvDetails_title"
        app:layout_constraintTop_toBottomOf="@+id/fr_weapon_details_tvDetails_title">

        <TextView
            android:id="@+id/fr_weapon_details_tvId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Id"
            android:textAlignment="textEnd"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="210dp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textAlignment="textEnd"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="246dp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvFire_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fire mode"
            android:textAlignment="textEnd"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="273dp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvShoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Shoot"
            android:textAlignment="textEnd"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="300dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fr_weapon_details_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/fr_weapon_details_linearLayout_detail_titles"
        app:layout_constraintTop_toBottomOf="@+id/fr_weapon_details_tvDetails_title">

        <TextView
            android:id="@+id/fr_weapon_details_tvId_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            tools:layout_editor_absoluteX="223dp"
            tools:layout_editor_absoluteY="209dp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvName_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Weapon 1"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="246dp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvFire_mode_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Burst"
            tools:layout_editor_absoluteX="214dp"
            tools:layout_editor_absoluteY="277dp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvShoot_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Shoot 1, Shoot 3"
            tools:layout_editor_absoluteX="205dp"
            tools:layout_editor_absoluteY="303dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fr_weapon_details_linearLayout_battery"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fr_weapon_details_linearLayout_fire_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/fr_weapon_details_ivBattery_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/battery_level_icon"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_battery"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="262dp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvBattery_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/battery"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvBattery_level"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="97%"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>

   <!-- <LinearLayout
        android:id="@+id/fr_weapon_details_linearLayout_oxygen"
        android:layout_width="50dp"
        android:layout_height="88dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fr_weapon_details_linearLayout_fire_mode"
        app:layout_constraintEnd_toStartOf="@+id/fr_weapon_details_linearLayout_propane">

        <ImageView
            android:id="@+id/fr_weapon_details_ivOxgen_icon"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/oxygen_level_icon"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_gas"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="262dp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvOxgen_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/oxygen"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvOxgen_level"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="100%"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout> -->

   <!-- <LinearLayout
        android:id="@+id/fr_weapon_details_linearLayout_propane"
        android:layout_width="50dp"
        android:layout_height="88dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fr_weapon_details_linearLayout_fire_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/fr_weapon_details_ivPropane_icon"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/propane_level_icon"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_gas"
            tools:layout_editor_absoluteX="120dp"
            tools:layout_editor_absoluteY="262dp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvPropane_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/propane"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fr_weapon_details_tvPropane_level"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="14%"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout> -->

    <LinearLayout
        android:id="@+id/fr_weapon_details_linearLayout_fire_mode"
        android:layout_width="248dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/fr_weapon_details_ibtn_single"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonshape_left"
            android:contentDescription="@string/single_fire_button"
            app:srcCompat="@drawable/ic_single" />

        <ImageButton
            android:id="@+id/fr_weapon_details_ibtn_burst"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonshape_center"
            android:contentDescription="@string/burst_fire_button"
            app:srcCompat="@drawable/ic_burst" />

        <Button
            android:id="@+id/fr_weapon_details_btn_full-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonshape_center"
            android:text="@string/auto" />

        <Button
            android:id="@+id/fr_weapon_details_btn_safe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonshape_right"
            android:text="@string/safe" />

    </LinearLayout>

    <include layout="@layout/fab_buttons_layout"></include>

</android.support.constraint.ConstraintLayout>

